# classicube-blockbench-loader

./: Cargo.toml  TODO
src/: error.rs  lib.rs
src/plugin/: json.rs  mod.rs  model.rs
src/plugin/blockbench/: json.rs  mod.rs
src/plugin/model/: cube.rs  mod.rs
tests/: Player.bbmodel  Player.json  rotated.bbmodel
