[package]
name = "classicube-blockbench-loader"
version = "0.1.0"
authors = ["SpiralP <spiral.palmer@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
base64 = "0.12.1"
classicube-helpers = { git = "https://github.com/SpiralP/rust-classicube-helpers.git" }
classicube-sys = { git = "https://github.com/SpiralP/rust-classicube-sys.git" }
error-chain = "0.12.2"
log = "0.4.8"
notify = "4.0.15"
png = "0.16.3"
serde = { version = "1.0.111", features = ["derive"] }
serde_json = "1.0.53"
simplelog = "0.8.0"


[patch."https://github.com/SpiralP/rust-classicube-sys.git"]
classicube-sys = { git = "https://github.com/SpiralP/rust-classicube-sys//", branch = "next" }

